feat: add orders and supplies, documentation and swagger for them
